# Liquid-Oxygen

./: .gitignore  .stylish-haskell.yaml  LICENSE  README.md  flake.nix  fourmolu.yaml  liquid-oxygen.cabal  source.lox
eg/: bench.lox  board.lox  clock.lox  closure.lox  fib.lox  fun.lox  gol.lox  idk.lox  if.lox  leibnitz_pi.lox  maybe.lox  modded.lox  mutate.lox  nest.lox  new.lox  scope1.lox  self.lox  source.lox  test.lox  trees.lox  tuple.lox  xyz.lox
examples/: fn.lox  fun.lox  source.lox  test.lox
src/: AST.hs  Ast.hs  Environment.hs  Error.hs  Interpreter.hs  Main.hs  Parser.hs  Position.hs  Repl.hs  Resolver.hs  Scanner.hs  Syntax.hs  Token.hs  Utils.hs
