cabal-version:      3.0
name:               liquid-oxygen
version:            0.1.0.0
synopsis:           Lox interpreter
license:            MIT
author:             shettysach

build-type:         Simple
extra-doc-files:    CHANGELOG.md

executable liquid-oxygen
    hs-source-dirs:   src
    main-is:          Main.hs
    other-modules:    
      AST
      Environment
      Error
      Interpreter
      Parser
      Resolver
      Scanner
      Token
    build-depends:    
      base ^>=4.18.2.1,
      containers,
      transformers
    default-language: Haskell2010
    ghc-options:      -O2 -Wall
