cabal-version:      3.0
name:               liquid-oxygen
version:            0.1.0.0
synopsis:           Lox interpreter
license:            MIT
author:             shettysach

build-type:         Simple
extra-doc-files:    CHANGELOG.md

executable liquid-oxygen
    hs-source-dirs:   src
    main-is:          Main.hs
    other-modules:    
      Environment
      Error
      Interpreter
      Parser
      Repl
      Resolver
      Scanner
      Syntax
      Token
    build-depends:    
      base ^>=4.19.2.0,
      containers,
      transformers,
      time
    default-language: Haskell2010
    ghc-options:      -O2 -Wall
